# site-41023254

./: .gitignore  .gitmodules  README.md  init.py  mian.py  pyproject.toml  server.py
config/: config  content.htm  content_backup.htm  sitetitle
content/: About.html  Brython.html  CAD2022.html  HW.html  NX2027.html  Onshape.html  Solvespace.html  W10.html  W11.html  W14.html  W16.html  W6.html  index.html  sitemap.html  tipuesearch_content.js
downloads/: 41023254-NX.7z  41023254-solvespace.7z  CoppeliaSim one link.ttt  CoppeliaSim two link.ttt
